--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,5 +1,5 @@
 # Change these first
-owner: kfjaaramillo # Your GitHub organization or username, where this repository lives
+owner: kfjaramillo # Your GitHub organization or username, where this repository lives
 repo: Monitoreo1 # The name of this repository
 
 sites:
