--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -14,6 +14,8 @@ sites:
 
 assignees:
   - kfjaramillo  
+  up: true
+  maxResponseTime: 6000
   
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
